Change firebase project

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -139,3 +139,9 @@
         white-space: unset;
     }
 }
+
+@import url('https://fonts.googleapis.com/css2?family=Grape+Nuts&display=swap');
+
+* {
+  //  font-family: 'Grape Nuts', cursive;
+}
